--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
- <nav class="navbar navbar-expand-sm fs-5 fixed-top bg-light">
+ <nav class="navbar navbar-expand-sm fs-5 fixed-top nav shadow">
     <div class="container">
       <a href="#" class="navbar-brand">Flora</a>
 
@@ -32,15 +32,22 @@
       </div>
     </div>
   </nav>
- <header class="header d-flex flex-column align-items-center justify-content-center">
-    <div class="container text-light header__text d-flex flex-column align-items-center text-center">
-      <h1>Loved by <span class="green-text">gardens</span><br>
-        Trusted by <span class="green-text">gardeners</span></h1>
-      <p>We will help you build your dream garden.</p>
-      <button class="btn btn-success header__btn">Contact</button>
+ <header class="pt-5 pb-5">
+  <div class="pt-5 container text-dark header__text">
+    <div class="row">
+      <div class="col-12 col-lg-6 d-flex flex-column align-items-center text-center justify-content-lg-center align-items-lg-start text-lg-start">
+        <h1>Loved by <span class="orange-text">gardens</span><br>
+          Trusted by <span class="orange-text">gardeners</span></h1>
+        <p>We will help you build your dream garden. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore in odit laboriosam nesciunt? Quia!
+        </p>
+        <button class="btn btn-success header__btn">Contact</button>
+      </div>
+      <div class="col-12 col-lg-6">
+        <img src="./dist/svg/header.svg" alt="Man with watering can">
+      </div>
     </div>
-    <div class="header__bg"></div>
-  </header>
+  </div>
+</header>
  <main class="main text-light">
     <section class="section-color-1">
         <div class="container pt-4 pb-4 d-flex flex-column align-items-center">
@@ -83,12 +90,12 @@
         <div class="container">
             <div class="row text-dark">
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
-                    <img class="object-fit-cover" src="./dist/img/aboutimg.png" alt="Man on balcony with plants.">
+                    <img class="w-100" src="./dist/svg/aboutus.svg" alt="Man on balcony with plants.">
                 </div>
                 <div class="col-12 col-lg-6 d-lg-flex flex-lg-column justify-content-lg-center">
                     <h2 class="orange-text fs-5 text-center text-lg-start">About us</h2>
                     <p class="pb-1 fs-2 text-center text-lg-start">About E-Plant</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sapiente labore temporibus ipsum
+                    <p class="text-center text-lg-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sapiente labore temporibus ipsum
                         veritatis laborum voluptas in obcaecati iste et.</p>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <button class="btn btn-success">Read more</button>
