--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flora - Home</title>
+  <link rel="shortcut icon" href="./dist/img/florafavicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./dist/css/style.min.css">
@@ -13,25 +14,28 @@
 
 <body>
  <nav class="navbar navbar-expand-sm fs-5 fixed-top nav shadow">
-    <div class="container">
+  <div class="container">
+    <div class="d-flex align-items-center">
+      <img class="me-2" src="./dist/img/florafavicon.png" alt="Flora Logo">
       <a href="#" class="navbar-brand">Flora</a>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navmenu">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a href="#about" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact</a>
-          </li>
-        </ul>
-      </div>
     </div>
-  </nav>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navmenu">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a href="#about" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
  <header class="pt-5 pb-5">
   <div class="pt-5 container text-dark header__text">
     <div class="row">
@@ -49,7 +53,7 @@
   </div>
 </header>
  <main class="main text-light">
-    <section class="section-color-1">
+    <section class="section-color-1 pt-2 pb-2">
         <div class="container pt-4 pb-4 d-flex flex-column align-items-center">
             <h2 class="orange-text fs-5">Our service</h2>
             <p class="pb-1 fs-2">What we offer</p>
@@ -86,7 +90,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="pt-2 pb-2" id="about">
         <div class="container">
             <div class="row text-dark">
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
@@ -95,7 +99,8 @@
                 <div class="col-12 col-lg-6 d-lg-flex flex-lg-column justify-content-lg-center">
                     <h2 class="orange-text fs-5 text-center text-lg-start">About us</h2>
                     <p class="pb-1 fs-2 text-center text-lg-start">About E-Plant</p>
-                    <p class="text-center text-lg-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sapiente labore temporibus ipsum
+                    <p class="text-center text-lg-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                        sapiente labore temporibus ipsum
                         veritatis laborum voluptas in obcaecati iste et.</p>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <button class="btn btn-success">Read more</button>
@@ -104,7 +109,88 @@
             </div>
         </div>
     </section>
+    <section class="section-color-1 pt-2 pb-2">
+        <div class="container pt-4 pb-4">
+            <h2 class="orange-text fs-5 text-center">Best sell</h2>
+            <p class="pb-1 fs-2 text-center">Best Selling Products</p>
+            <div class="row text-light d-flex justify-content-center">
+                <div class="col-8 col-lg-3">
+                    <div class="d-flex flex-column align-items-center border rounded-3 plant-card shadow p-3">
+                        <img class="w-50 object-fit-cover plant-img mb-2" src="./dist/img/plant1.png" alt="Plant">
+                        <div class="w-100 px-2 pb-3">
+                            <p class="mb-0 text-secondary">Indoor Plant</p>
+                            <p class="mb-0 fs-4">Lorem, ipsum.</p>
+                        </div>
+                        <div class="w-100 px-2 d-flex justify-content-between align-items-center">
+                            <div>
+                                <p class="mb-0">Price</p>
+                                <p class="mb-0 fs-4 green-text">$23.99</p>
+                            </div>
+                            <i class="fa-solid fa-plus green-text p-3 rounded-3 shadow"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-8 col-lg-3 pt-4 pb-4 pt-lg-0 pb-lg-0 h-lg-100">
+                    <div class="d-flex flex-column align-items-center border rounded-3 plant-card shadow p-3">
+                        <img class="w-50 object-fit-cover plant-img mb-2" src="./dist/img/plant1.png" alt="Plant">
+                        <div class="w-100 px-2 pb-3">
+                            <p class="mb-0 text-secondary">Outdoor Plant</p>
+                            <p class="mb-0 fs-4">Lorem, ipsum.</p>
+                        </div>
+                        <div class="w-100 px-2 d-flex justify-content-between align-items-center">
+                            <div>
+                                <p class="mb-0">Price</p>
+                                <p class="mb-0 fs-4 green-text">$32.99</p>
+                            </div>
+                            <i class="fa-solid fa-plus green-text p-3 rounded-3 shadow"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-8 col-lg-3">
+                    <div class="d-flex flex-column align-items-center border rounded-3 plant-card shadow p-3">
+                        <img class="w-50 object-fit-cover plant-img mb-2" src="./dist/img/plant1.png" alt="Plant">
+                        <div class="w-100 px-2 pb-3">
+                            <p class="mb-0 text-secondary">Indoor Plant</p>
+                            <p class="mb-0 fs-4">Lorem, ipsum.</p>
+                        </div>
+                        <div class="w-100 px-2 d-flex justify-content-between align-items-center">
+                            <div>
+                                <p class="mb-0">Price</p>
+                                <p class="mb-0 fs-4 green-text">$23.99</p>
+                            </div>
+                            <i class="fa-solid fa-plus green-text p-3 rounded-3 shadow"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="pt-2 pb-2">
+        <div class="continer text-dark d-flex flex-column align-items-center">
+            <h2 class="pb-4 pt-3 text-center">Subscribe for get in on the best deals</h2>
+            <div class="d-flex pb-4">
+                <input class="input-sub p-2" type="text" placeholder="Enter Email Address">
+                <button class="btn-sub btn btn-success rounded-0">Subscribe</button>
+            </div>
+        </div>
+    </section>
 </main>
+ <footer class="section-color-1 pt-2 pb-2 text-light text-center">
+    <div class="container pt-4 pb-4">
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-md-4 pb-4 pb-lg-0">
+                <h3 class="fs-4">Flora</h3>
+                <p>A great place to buy, sell plants and get help from our experts.</p>
+            </div>
+            <div class="col-12 col-md-4">
+                <h3 class="fs-4">Navigation</h3>
+                <a href="#" class="nav-link mt-2 mb-2">Home</a>
+                <a href="#" class="nav-link mt-2 mb-2">About</a>
+                <a href="#" class="nav-link mt-2 mb-2">Contact</a>
+            </div>
+        </div>
+    </div>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
